--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "backend",
+  "name": "money-manager",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Kuhan",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongoose": "^8.7.2"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.0",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
